# eco-system-sim

./: Cargo.toml
src/: components.rs  entities.rs  main.rs  main_state.rs  resources.rs  utils.rs
src/systems/: creature_update.rs  edge_system.rs  mod.rs  move_system.rs  rendering_system.rs
