[package]
name = "eco-system-sim"
version = "0.1.0"
authors = ["mthom26 <mthom2626@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
specs = { version = "0.16.1", features = ["specs-derive"] }
rand = "0.7.3"
